# baaboon

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: barrier_genes.yaml  golden_standards.yaml  niche_genes.yaml  xeno_antigens.yaml
docs/: verification.md
notebooks/: 01_pancreas_mvp.py  02_kidney_mvp.py  03_thymus_mvp.py
papovis/: __init__.py  catalog.py  cli.py  competence.py  design.py  ensembl.py  figures.py  golden.py  grna.py  models.py  niche.py  report.py  xeno.py
scripts/: generate_figures.py
tests/: conftest.py  test_catalog.py  test_crispo_mstn.py  test_grna.py  test_phylogeny.py  test_real_case_studies.py  test_vilarino_pdx1.py  test_xeno_delta.py
