[project]
name = "papovis"
version = "0.1.0"
description = "Two-stage CRISPR design pipeline for baboon-organ-in-sheep chimeras and sheep-to-baboon xenografts"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "baboonedit contributors" }]
keywords = [
    "crispr",
    "xenotransplantation",
    "blastocyst-complementation",
    "baboon",
    "sheep",
    "comparative-genomics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "biopython>=1.83",
    "pydantic>=2.7",
    "requests>=2.32",
    "pyyaml>=6.0",
    "rich>=13.7",
    "typer>=0.12",
    "tenacity>=8.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-vcr>=1.0.2",
    "ruff>=0.5",
    "mypy>=1.10",
    "jupyter>=1.0",
]

[project.scripts]
papovis = "papovis.cli:app"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/baboonedit"
Documentation = "https://github.com/YOUR_USERNAME/baboonedit#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["papovis"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: marks tests requiring network access to Ensembl REST",
    "slow: marks tests that take more than a few seconds",
    "golden: Tier 1 verification against published sgRNAs",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
